<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zyuco.musicbox.MainActivity">

    <ImageView
        android:id="@+id/cd"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/cd"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:text="@string/time_zero"
        app:layout_constraintBottom_toBottomOf="@+id/progress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/progress"
        app:layout_constraintTop_toTopOf="@+id/progress"/>

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/state_init"
        app:layout_constraintBottom_toTopOf="@id/current_time"
        app:layout_constraintLeft_toLeftOf="@id/current_time"
        app:layout_constraintRight_toRightOf="@id/current_time"/>

    <SeekBar
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintLeft_toRightOf="@id/current_time"
        app:layout_constraintRight_toLeftOf="@+id/total_time"
        app:layout_constraintTop_toBottomOf="@id/cd"/>

    <TextView
        android:id="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:text="@string/time_zero"
        app:layout_constraintBottom_toBottomOf="@id/progress"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/progress"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/progress"/>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/button_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stop_button"
        app:layout_constraintTop_toBottomOf="@id/progress"/>

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/button_stop"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintLeft_toRightOf="@id/play_button"
        app:layout_constraintRight_toLeftOf="@+id/quit_button"
        app:layout_constraintTop_toTopOf="@id/play_button"/>

    <Button
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_quit"
        app:layout_constraintBottom_toBottomOf="@id/stop_button"
        app:layout_constraintLeft_toRightOf="@id/stop_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/stop_button"/>
</android.support.constraint.ConstraintLayout>
